@@ -1,3 +1,6 @@
+2015-01-13  Alper Ipek <3denizotesi@gmail.com>
+    * Strict JSON request validation with schema definition (1.3.0)
+
 2015-01-09  Alper Ipek <3denizotesi@gmail.com>
     * Pika reconnection for idle clients (1.2.0)
 
